Fixed wrong pattern matching with missing field.